--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Build archlinux kernel
+      - name: Build Archlinux Kernel
         uses: vufa/arch-makepkg-action@master
         with:
           packages: >
