--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,8 @@ name: Build CI
 
 on:
   push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    tags:
+      - "v*.*.*"
 
 jobs:
   build:
@@ -13,6 +12,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Clone Archlinux
+        uses: actions/checkout@v3
+        with:
+          repository: archlinux/linux
+          ref: v5.18.15-arch1
+          path: archlinux-linux
 
       - name: Build Archlinux Kernel
         uses: vufa/arch-makepkg-action@master
@@ -32,12 +38,12 @@ jobs:
             imagemagick
             texlive-latexextra
             git
-          scripts: "makepkg -s --skippgpcheck"
+          scripts: "makepkg --skippgpcheck"
 
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: linux*.pkg*
+          files: "*.pkg*"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
