--- a/linux/PKGBUILD
+++ b/linux/PKGBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
-pkgbase=linux-skip_override_table
+pkgbase=linux
 pkgver=5.19.arch1
 pkgrel=1
 pkgdesc='Linux'
 _srctag=v${pkgver%.*}-${pkgver##*.}
-url="https://github.com/puzzle9/archlinux_build_kernel/releases/tag/$_srctag"
+url="https://github.com/archlinux/linux/commits/$_srctag"
 arch=(x86_64)
 license=(GPL2)
 makedepends=(
@@ -16,7 +16,7 @@ makedepends=(
 options=('!strip')
 _srcname=archlinux-linux
 source=(
-  skip_override_table.patch
+  "$_srcname::git+https://github.com/archlinux/linux?signed#tag=$_srctag"
   config         # the main kernel config file
 )
 validpgpkeys=(
@@ -33,8 +33,6 @@ export KBUILD_BUILD_USER=$pkgbase
 export KBUILD_BUILD_TIMESTAMP="$(date -Ru${SOURCE_DATE_EPOCH:+d @$SOURCE_DATE_EPOCH})"
 
 prepare() {
-  ln -s ../$_srcname ./
-
   cd $_srcname
 
   echo "Setting version..."
@@ -48,7 +46,7 @@ prepare() {
     src="${src##*/}"
     [[ $src = *.patch ]] || continue
     echo "Applying patch $src..."
-    patch -Np1 --ignore-whitespace < "../$src"
+    patch -Np1 < "../$src"
   done
 
   echo "Setting config..."
